--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         Sungmin Kim
     </h1>
     <ul>
-        <li><a href="home.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="projects.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
