--- a/Projects/pong.html
+++ b/Projects/pong.html
@@ -42,10 +42,10 @@
 </head>
 <body>
     <ul>
-        <li><a href="home.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../about.html">About</a></li>
+        <li><a href="../projects.html">Projects</a></li>
+        <li><a href="../contact.html">Contact</a></li>
     </ul>
     <!-- our "canvas" where we draw things-->
     <canvas id="canvas" width="600" height="400"></canvas>
