--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="Projects/pong.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
 </body>
