--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
     <ul class="navbar">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="projects.html">Projects</a></li>
+        <li><a href="Projects/pong.html">Projects</a></li>
         <li><a href="contact.html">Contact</a></li>
     </ul>
     <p>sungmin.kim9067@gmail.com</p>
