--- a/Projects/pong.html
+++ b/Projects/pong.html
@@ -1,56 +1,57 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pong</title>
-    <style>
-        * {
-            padding: 0;
-            margin: 0;
-        }
-
-        body {
-            width: 100vw;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: #999999;
-        }
-        li {
-            float: left;
-        }
-
-        li a{
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
-        }
-        li a:hover{
-            background-color: black;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="../main.css">
 </head>
+<style>
+    h1{text-align: center;}
+    p{text-align: center;}
+    ul.navbar {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #999999;
+    }
+    ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #999999;
+    }
+    li {
+        float: left;
+    }
+
+    li a{
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+    }
+    li a:hover{
+        background-color: black;
+    }
+</style>
 <body>
-    <ul>
-        <li><a href="../index.html">Home</a></li>
-        <li><a href="../about.html">About</a></li>
-        <li><a href="../projects.html">Projects</a></li>
+    <h1>
+        Sungmin Kim
+    </h1>
+    <ul class="navbar">
+        <li><a href="../index.html">About</a></li>
+        <li><a href="pong.html">Projects</a></li>
         <li><a href="../contact.html">Contact</a></li>
     </ul>
     <!-- our "canvas" where we draw things-->
-    <canvas id="canvas" width="600" height="400"></canvas>
-
     <!-- link to script.js -->
-    <script type="text/javascript" src="script.js"></script>
+    <section>
+        <canvas id="canvas" width="600" height="400"></canvas>
+        <script type="text/javascript" src="script.js"></script>
+    </section>
+
 </body>
 </html>
