--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         }
     </script>
     <p>
-        Hi, I'm Sungmin.
+        Hi, I'm Sungmin. Software engineering student at Rochester Institute of Technology
     </p>
   </body>
 </html>
