--- a/index.html
+++ b/index.html
@@ -6,40 +6,6 @@
 		<link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <style>
-      h1{text-align: center;}
-      p{text-align: center;}
-      ul {
-          position: relative;
-          list-style-type: none;
-          margin: 0;
-          height: 46px;
-          padding: 0;
-          overflow:visible;
-          background-color: #999999;
-      }
-      li {
-          float: left;
-      }
-
-      .dropdown-content {
-          display: none;
-          position: absolute;
-          background-color: #999999;
-          min-width: 180px;
-          box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-      }
-
-      li a{
-          display: block;
-          color: white;
-          text-align: center;
-          padding: 14px 16px;
-          text-decoration: none;
-      }
-      li a:hover{
-          background-color: black;
-      }
-      .show{display: block;}
   </style>
   <body>
     <h1>
@@ -51,7 +17,8 @@
             <a>Projects</a>
             <div id="pDropdown" class="dropdown-content">
                 <a href="Projects/pong.html">Pong</a>
-                <a href="index.html">Two</a>
+                <a href="Projects/minesweeper.html">Minesweeper</a>
+                <a href="Projects/concentration.html">Concentration</a>
             </div>
         </li>
         <li><a href="contact.html">Contact</a></li>
